Feat: Find by index utility, add dev dependancies for unit testing

--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@headlessui/react": "^2.1.2",
-    "@heroicons/react": "^2.1.5",
-    "react-router-dom": "^6.25.0"
-  }
+  "dependencies": {}
+    
 }
