--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "server for the Lighthouse LLM catalog  website",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prod": "NODE_ENV=prod nodemon src/index.js",
+    "start": "NODE_ENV=dev nodemon src/index.js",
+    "test": "cross-env NODE_ENV=test mocha --timeout 10000 --exit --recursive",
+    "test-win": "cross-env NODE_ENV=test mocha 'test/**/*.test.js' --timeout 10000 --exit --recursive ",
+    "coverage": "cross-env NODE_ENV=test c8 -r html npm test",
+    "coverage-win": "cross-env NODE_ENV=test c8 -r html npm run test-win"
   },
   "repository": {
     "type": "git",
