--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "prod": "NODE_ENV=prod nodemon src/index.js",
     "start": "NODE_ENV=dev nodemon src/index.js",
+    "start-win": "SET NODE_ENV=dev&&nodemon src/index.js",
     "test": "cross-env NODE_ENV=test mocha --timeout 10000 --exit --recursive",
     "test-win": "cross-env NODE_ENV=test mocha 'test/**/*.test.js' --timeout 10000 --exit --recursive ",
     "coverage": "cross-env NODE_ENV=test c8 -r html npm test",
