--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "prod": "NODE_ENV=prod nodemon src/index.js",
+    "prod": "NODE_ENV=prod src/index.js",
     "start": "NODE_ENV=dev nodemon src/index.js",
     "start-win": "SET NODE_ENV=dev&&nodemon src/index.js",
     "test": "cross-env NODE_ENV=test mocha --timeout 10000 --exit --recursive",
