--- a/website/pg-backend/package.json
+++ b/website/pg-backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "prod": "NODE_ENV=prod src/index.js",
+     "prod": "node src/index.js",
     "start": "NODE_ENV=dev nodemon src/index.js",
     "start-win": "SET NODE_ENV=dev&&nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
